--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+    <title>
+      My Political Simulator
+    </title>
+  </head>
   <body>
     Hello there, awesome person! 
   </body>
