--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      My Political Simulator
+      <h1>My Political Simulator</h1>
     </title>
   </head>
   <body>
