--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      <h1>My Political Simulator</h1>
+      <img src=https://i.imgur.com/UZv5vZG.png>
     </title>
   </head>
   <body>
