--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     Hello there, awesome person! 
+    Here is my list of favorite sites to use:
+    <ul>
+      <li>Sploder</li>
+      <li>PT Classic</li>
+      <li>8Values</li>
+    </ul>
   </body>
 </html>
