--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Here is my list of favorite sites to use:
     <ul>
       <li>Sploder</li>
-      <li>PT Classic</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
       <li>8Values</li>
     </ul>
   </body>
