--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
-    <title>
-      <img src=https://i.imgur.com/UZv5vZG.png>
-    </title>
-  </head>
+        <title><img src=https://i.imgur.com/UZv5vZG.png></title>
+        <link rel="stylesheet" href="style.css">
+    </head>
   <body>
     Hello there, awesome person! 
     Here is my list of favorite sites to use:
